tests/trybuild/api_resource_fail_bad_name.stderr
error: ApiResource requires a struct name ending in `Resource`
 --> tests/trybuild/api_resource_fail_bad_name.rs:4:8
  |
4 | struct Widget {
  |        ^^^^^^
