tests/trybuild/api_resource_fail_bad_name.rs
use hubuum_client_derive::ApiResource;

#[derive(ApiResource)]
struct Widget {
    id: i32,
}

fn main() {}
